--- a/index.html
+++ b/index.html
@@ -59,9 +59,41 @@ footer {text-align:center;font-size:12px;color:#777;margin:30px 0;}
     <button type="submit" class="submit-btn">Enviar respuestas</button>
   <input type="hidden" name="_subject" value="Nuevo resultado TPH - AC Royal Mindset">
 <input type="hidden" name="_replyto" value="acroyalmindset@gmail.com">
+    <!-- 🔸 Integrare completă Formspree + date + întrebări + răspunsuri -->
+<input type="hidden" name="_subject" value="Nuevo resultado TPH - AC Royal Mindset">
+<input type="hidden" name="_replyto" value="acroyalmindset@gmail.com">
+<input type="hidden" name="fecha" id="fecha">
+
+<script>
+document.addEventListener("DOMContentLoaded", function() {
+  const form = document.querySelector("form");
+  if (!form) return;
+
+  // Setăm automat data completării testului
+  const fechaField = document.getElementById("fecha");
+  if (fechaField) {
+    fechaField.value = new Date().toLocaleString("es-ES");
+  }
+
+  // La trimiterea formularului
+  form.addEventListener("submit", function() {
+    const labels = document.querySelectorAll("label");
+    const selects = document.querySelectorAll("select");
+
+    labels.forEach((label, i) => {
+      if (selects[i]) {
+        const hidden = document.createElement("input");
+        hidden.type = "hidden";
+        hidden.name = "Pregunta " + (i + 1) + ": " + label.innerText.trim();
+        hidden.value = selects[i].value;
+        form.appendChild(hidden);
+      }
+    });
+  });
+});
+</script>
 </form>
 </main>
-
 <section class="wrap confirmation" id="confirmation">
   <h2>Realiza el pago para recibir tu informe</h2>
   <p style="font-size:15px;">Selecciona una opción segura:</p>
